--- a/style2.css
+++ b/style2.css
@@ -2,17 +2,25 @@ body{
     margin: 0;
     padding: 0;
     font-family: Helvetica ;
-    background: linear-gradient(100deg,green
-    ,red);
+    background: white;
     height: 100vh;
 }
+.fondo{
+    display: flex;
+    margin: 0 20px 20px 0;
+    justify-content: space-between;
+    align-items: stretch; /* hace que se estiren */
+    height: 100vh; /* ocupa toda la altura de la pantalla */
+}
+
 .formulario{
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
     width: 400px;
-    background-color: white;
+    background-color: #b9eee7;
+
     border-radius: 10px;
 
 }
@@ -20,6 +28,8 @@ body{
     text-align: center;
     padding: 0 0 20px 0;
     border-bottom: 1px solid silver;
+    color: purple;
+
 
 }
 
