pequeños cambios al index
cambie la nav bar para q funcionara y hice q los productos te llevaran a la pgina de productos

--- a/style.css
+++ b/style.css
@@ -24,7 +24,8 @@ body {
 .tamañoletra {
   margin: 0;
   padding: 0;
-  font-size: 0.6rem;
+  font-size: 0.8rem;
+  color: black;
 }
 .productos-destacados {
   text-align: center;
