--- a/style.css
+++ b/style.css
@@ -389,6 +389,20 @@ object-fit:cover;  /* ajusta la imagen al contenedor sin deformar */
     right: -10px;
     text-shadow: 0 0 10px black;
 }
+/* Flechas azules para el carrusel */
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  filter: invert(25%) sepia(98%) saturate(5000%) hue-rotate(200deg);
+  width: 110px;
+  height: 110px;
+}
+
+/* Imágenes del carrusel */
+.carousel-item img {
+  height: 750px;
+  object-fit: cover;
+}
+
 .footer a:hover {
   color: #0d6efd; /* azul de Bootstrap */
   transition: color 0.3s;
